syntax = "proto3";

option csharp_namespace="BooksService.Grpc";

service BooksServiceProto {
	rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
	rpc GetBook(GetBookRequest) returns (GetBookResponse);
	rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse);
	rpc CrateBook(CrateBookRequest) returns (CrateBookResponse);
	rpc DeleteBook(DeleteBookRequest) returns (DeleteBooksResponse);
}

message Book {
	string id = 1;
	string authorId = 2;
	string title = 3;
	string description = 4;
}

message GetBooksRequest {};

message GetBooksResponse {
	repeated Book books = 1;
};

message GetBookRequest {
	string id = 1;
};

message GetBookResponse {
	Book book = 1;
};

message UpdateBookRequest {
	Book book = 1;
};

message UpdateBookResponse {};

message CrateBookRequest {
	Book book = 1;
};

message CrateBookResponse {
	Book book = 1;
};

message DeleteBookRequest {
	string id = 1;
}

message DeleteBooksResponse {}
